# slippage

./: --upgrade-status  .gitignore  2025 Assignments.csv  API.md  ASSIGNMENT_RULES.md  CMakeLists.txt  PACKAGING.md  README.md  Ray Slippage MEMBERS.csv  Ray Slippage SLIPS.csv  WARP.md  assignment.cpp  assignment.h  assignment.hpp  assignment_engine.cpp  assignment_engine.h  assignment_engine.hpp  build-deb.sh  complex_output.csv  complex_test_members.csv  complex_test_slips.csv  csv_parser.cpp  csv_parser.h  csv_parser.hpp  dimensions.cpp  dimensions.h  generate_test_data.py  main.cpp  member.cpp  member.h  member.hpp  models.cpp  models.h  slip.cpp  slip.h  slip.hpp  test_comprehensive_priority.csv  test_dock_status_members.csv  test_dock_status_slips.csv  test_members.csv  (+8 more)
cmake/: SlippageConfig.cmake.in
debian/: changelog  control  copyright  rules  slippage.install
examples/: CMakeLists.txt  README.md  example_usage.cpp  version_example.cpp
tests/: test_assignment.cpp
